# next-divel

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Dockerfile  Doxyfile  README.md  build.sh  docker-compose.yml  index.html  params.json
emulator/: index.html  v86_all.js
grub/: grub.cfg
include/: math.hpp
include/ND/: ND_Color.hpp  ND_GDT.hpp  ND_IDT.hpp  ND_IRQ.hpp  ND_ISR.hpp  ND_Keyboard.hpp  ND_Keymap.hpp  ND_Memory.hpp  ND_Multiboot.hpp  ND_Panic.hpp  ND_Ports.hpp  ND_Screen.hpp  ND_String.hpp  ND_Timer.hpp  ND_Types.hpp  ND_Version.hpp
iso/: CMakeLists.txt  iso.sh
nextroot/: CMakeLists.txt
src/: CMakeLists.txt
src/start/: ND_GDT.asm  ND_GDT.cpp  ND_IDT.cpp  ND_IRQ.cpp  ND_ISR.cpp  ND_Keyboard.cpp  ND_Memory.cpp  ND_Panic.cpp  ND_Ports.cpp  ND_Screen.cpp  ND_String.cpp  ND_Timer.cpp  NextKernel_Main.c  NextKernel_Main.cpp  NextShellLite.cpp  NextShellLite.hpp  boot.asm  link.ld  math.cpp  next-cc.sh
