PROJECT(NextDivel-src ASM C CXX)

ENABLE_LANGUAGE(ASM-ATT)

FILE(GLOB ASM_START "start/*.asm")
FILE(GLOB CXX_START "start/*.cpp")
SET(SRC_START ${ASM_START} ${CXX_START})

ADD_EXECUTABLE(START.ELF ${SRC_START})
SET_SOURCE_FILES_PROPERTIES(
	${SRC_START} PROPERTIES OBJECT_DEPENDS ${CMAKE_SOURCE_DIR}/start/link.ld
)
