PROJECT(NextDivel-src ASM C CXX)

ENABLE_LANGUAGE(ASM-ATT)

FILE(GLOB ASM_START "start/*.asm")
FILE(GLOB CXX_START "start/*.c")
SET(SRC_START ${ASM_START} ${CXX_START})
SET(CMAKE_EXE_LINKER_FLAGS "-T${CMAKE_SOURCE_DIR}/src/start/link.ld -std=c++11 -nostdlib -fPIC")
ADD_DEFINITIONS("-DNEXT_DIVEL")

ADD_EXECUTABLE(START.ELF ${SRC_START})
#execute_process(COMMAND "${CMAKE_COMMAND} -E make_directory nextroot/next/" WORKING_DIRECTORY ${CMAKE_BINARY_DIR} RESULT_VARIABLE rv)
#MESSAGE(${rv})
#execute_process(COMMAND "${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/src/START.ELF ${CMAKE_BINARY_DIR}/nextroot/next/")
INSTALL(TARGETS START.ELF DESTINATION next)
